Updated completion code

--- a/src/templates/thank_you.html
+++ b/src/templates/thank_you.html
@@ -109,7 +109,7 @@
         function downloadCode() {
             const code = "{{ completion_code }}";
             const prolificId = "{{ prolific_id }}";
-            const content = `Survey 16-digit completion code: ${code}\nProlific ID: ${prolificId}\nProlific completion code: C3CB5BBT`;
+            const content = `Survey 16-digit completion code: ${code}\nProlific ID: ${prolificId}\nProlific completion code: C12GLBJJ`;
             const blob = new Blob([content], { type: "text/plain" });
             const link = document.createElement("a");
             link.href = URL.createObjectURL(blob);
@@ -147,7 +147,7 @@
 
                         <div class="alert alert-primary text-center">
                             <div class="mt-5 mb-5" style="color: #78191f;font-size: 1.4rem;">
-                                <strong>Prolific completion code:</strong><br> <strong>C3CB5BBT </strong>
+                                <strong>Prolific completion code:</strong><br> <strong>C12GLBJJ </strong>
                             </div>
 
                             <div class="mb-5" style="color: #78191f;font-size: 1.4rem;">
